MAJ du responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Accueil de Kidagain, la plateforme pour les enfants et les parents.">
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; img-src 'self' data:;">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <link rel="shortcut icon" href="img/logo.webp" type="image/x-icon">
     <title>KidAgain - Accueil</title>
     <link rel="stylesheet" href="css/style.css">
@@ -65,7 +71,7 @@
             <article class="pink">
                 <h1>Protéger notre belle planète</h1>
                 <img src="img/wastes.webp" alt="pollution" loading="lazy">
-                <p>Nous luttons contre le gaspillage en donnant une seconde vie aux objets. Chaque don évite des déchets supplémentaires, réduit la pollution et participe à préserver nos ressources naturelles pour les générations futures.</p>
+                <p>Nous luttons contre le gaspillage en donnant une seconde vie aux objets. Chacune de vos ventes évite des déchets supplémentaires, réduit la pollution et participe à préserver nos ressources naturelles pour les générations futures.</p>
             </article>
             
             <article class="green">
