--- a/login.html
+++ b/login.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.webp" type="image/x-icon">
     <title>KidAgain - Connexion</title>
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self'; img-src 'self' data:;">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
     <meta name="description" content="Page de connexion pour les administrateurs du site de KidAgain">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/form.css">
