--- a/admin.html
+++ b/admin.html
@@ -151,7 +151,7 @@
             <!-- Ballons -->
             <div class="product-card">
                 <div class="product-image">
-                    <img loading="lazy" src="img/products/ballons.jpg" alt="Ballons" class="product-img">
+                    <img loading="lazy" src="img/products/ballons.webp" alt="Ballons" class="product-img">
                 </div>
                 <div class="product-info">
                     <h3 class="product-name">Ballons</h3>
