ajout de zone de dépot d'image d'article

--- a/admin.html
+++ b/admin.html
@@ -42,6 +42,10 @@
             <h2>Ajouter un article</h2>
             <form>
                 <div>
+                    <label for="img">Image de l'article</label>
+                    <input type="file" id="file" name="file" required>
+                </div>
+                <div>
                     <label for="name">Nom de l’article</label>
                     <input type="text" id="name" name="name" placeholder="Ex: Poussette" required>
                 </div>
