--- a/admin.html
+++ b/admin.html
@@ -227,5 +227,6 @@
             <a href="#"><img src="img/linkedin.svg" alt="linkedin"></a>
         </article>
     </footer>
+    <script src="js/admin.js"></script>
 </body>
 </html>
