--- a/boutique.html
+++ b/boutique.html
@@ -132,7 +132,7 @@
     </main>
 
     <h1>Quelque chose vous intéresse?</h1>
-    <h2>Rendez-vous <a href="#">chez nous!</a></h2>
+    <h2>Rendez-vous <a href="https://www.google.com/maps/place/Aix-en-Provence/@43.5361002,5.3053399,23662m/data=!3m2!1e3!4b1!4m6!3m5!1s0x12c98da304b91259:0x5cb953bec8b688a3!8m2!3d43.5323032!4d5.4509692!16zL20vMGtuZnM?entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">chez nous!</a></h2>
 
     <footer>
         <article></article>
@@ -143,7 +143,6 @@
             <a href="#"><img src="img/linkedin.svg" alt="linkedin" loading="lazy"></a>
         </article>
     </footer>
-
 </body>
 </html>
 
