--- a/login.html
+++ b/login.html
@@ -18,24 +18,24 @@
 <body>
     <main>
         <h1>Connexion</h1>
-        <form>
-
+        <form id="login-form">
             <div>
                 <label for="email">Email <span class="required">*</span></label>
                 <input type="email" id="email" name="email" required>
             </div>
-
+        
             <div>
-                <label for="sujet">Mot de passe <span class="required">*</span></label>
+                <label for="password">Mot de passe <span class="required">*</span></label>
                 <div class="password-wrapper">
-                    <input type="password" id="password" name="password" required>
-                    <button type="button" class="toggle-password" aria-label="Afficher le mot de passe">👁️</button>
+                    <input type="password" id="password" name="password" required autocomplete="current-password">
+                    <button type="button" class="toggle-password" aria-label="Afficher le mot de passe" aria-pressed="false">👁️</button>
                 </div>
             </div>
-
-            <button type="submit" class="submit-btn" onclick="window.location.href='admin.html'">Me connecter</button>
+            <button type="submit" class="submit-btn">Me connecter</button>
         </form>
+        <p id="message" role="status" aria-live="polite"></p>
     </main>
+    <p id="message"></p>
     <script src="js/login.js"></script>
 </body>
 </html>
